[package]
name = "subrapid"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.24", features = ["blocking"] }
scraper = "0.24.0"
url = "2.5.7"
