[package]
name = "subrapid"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
json = "0.12.4"
openssl = { version = "0.10", features = ["vendored"] }
psl = "2.1.165"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.7"
